[package]
name = "leptos_minmax_cl_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.3.0", features = [
  "serde",
  "csr",
] }
leptos_meta = { version = "0.3.0", features = ["csr"] }
leptos_router = { version = "0.3.0", features = ["csr"]  }
log = "0.4"
gloo-net = { version = "0.2", features = ["http"] }
cfg-if = "1.0.0"

leptos_minmax_cl = { path = "../minmax_cl" }

leptos_icons = { git = "https://github.com/Carlosted/leptos-icons",  default_features = false, features = [
    "csr",
    "BiGraphql",
    "BiFilePlusSolid",
    "Bs1Circle",
    "BsFolder",
    "FaBarsSolid",
    "AiDeleteOutlined",
    "AiDeleteFilled",
    "ImPagebreak",
    "ImPageBreak",
    "IoColorWand",
    "OcAlertSm",
    "OcAlertLg"
] }


# dependecies for client (enable when csr or hydrate set)
wasm-bindgen = { version = "0.2.87" }
console_log = { version = "1"}
console_error_panic_hook = { version = "0.1"}


[package.metadata.leptos]
output-name = "leptos-minmax-cl-demo"

